Mise en place du système d'authentification, du reset password et configuration du Dockerfile

--- a/.env
+++ b/.env
@@ -37,5 +37,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+# MAILER_DSN=smtp://d34530cce3c74c:2671f059488975@sandbox.smtp.mailtrap.io:2525
+MAILER_DSN=smtps://ngaleufresnel@gmail.com:cmcuvawkmxhncnsb@smtp.gmail.com:465
 ###< symfony/mailer ###
