--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,20 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+# app_home:
+#     path: "/"
+#     controller: App\Controller\HomeController::home
+
+# app_visitor:
+#     path: "/allVisitors"
+#     controller: App\Controller\VisitorController::get_all_visitors
+
+# app_visit:
+#     path: "/visit"
+#     controller: App\Controller\VisitController::get_all_visits
+
+# app_user_index:
+#     path: "/admin/user"
+#     controller: App\Controller\UserController::get_all_users
+
