--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     profil_directory: '%kernel.project_dir%/public/uploads/profils'
+    pictures_directory: '%kernel.project_dir%/public/uploads/visit'
 
 
 services:
