--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -5,6 +5,7 @@ server {
     root /var/www/symfony/public;
 
     index index.php index.html;
+    client_max_body_size 50M;
 
     location / {
         try_files $uri /index.php$is_args$args;
