--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,7 +41,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/guide, roles: ROLE_GUIDE }
+        - { path: ^/guide, roles: ROLE_ADMIN }
 
         - { path: ^/visit/new, roles: ROLE_ADMIN }
         - { path: ^/visit/\d+/edit, roles: ROLE_ADMIN }
